got HTML sections no longer overlapping

--- a/static/style.css
+++ b/static/style.css
@@ -217,6 +217,8 @@ ul#menu li a:hover
 .sidebar li a.selected, .sidebar li a:hover, .sidebar li a.selected:hover
 { color: #A4AA04;} 
 
+.clear { clear: both; }
+
 #content
 { text-align: left;
   width: 624px;
